compiler/tests/fixtures/invalid/semantics/trope_fit_missing_required_role.viv
// Invalid: trope fit fails to cast required role

trope rivals:
    roles:
        @a:
            as: character
        @b:
            as: character
    conditions:
        @b in @a.enemies

action confront:
    roles:
        @aggressor:
            as: initiator
        @target:
            as: recipient
    conditions:
        fit trope rivals:
            with:
                @a: @aggressor
